force-app/main/default/objects/Billing_Center_Filter_Config__c/Billing_Center_Filter_Config__c.object-meta.xml
<CustomObject>
    <description>Defines configurable filters used to determine which records appear.</description>
    <label>Billing Center Filter Config</label>
    <nameField>
        <displayFormat>BCFIL-{00000}</displayFormat>
        <label>Billing Center Filter Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Filter Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>