force-app/main/default/objects/Billing_Center_Filter_Config__c/fields/Developer_Key__c.field-meta.xml
<CustomField>
    <fullName>Developer_Key__c</fullName>
    <label>Developer Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>