force-app/main/default/objects/Billing_Center_Filter_Config__c/fields/Filter_Logic_Group__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic_Group__c</fullName>
    <label>Filter Logic Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>