force-app/main/default/objects/Billing_Center_Filter_Config__c/fields/Section_Config__c.field-meta.xml
<CustomField>
    <fullName>Section_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Config</label>
    <referenceTo>Billing_Center_Section_Config__c</referenceTo>
    <relationshipLabel>Billing Center Filter Configs</relationshipLabel>
    <relationshipName>Billing_Center_Filter_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>