force-app/main/default/objects/Billing_Center_Filter_Config__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Date Literal</fullName>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
            <value>
                <fullName>Apex Handler</fullName>
            </value>
            <value>
                <fullName>Global Setting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>